# persons/docs/swagger.json
@@ -5,6 +5,26 @@
     },
     "host": "localhost:8080",
     "paths": {
+        "/health": {
+            "get": {
+                "description": "Checking functionality",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "health"
+                ],
+                "summary": "Checking functionality",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.RequestOK"
+                        }
+                    }
+                }
+            }
+        },
         "/persons": {
             "get": {
                 "description": "Get list persons",
@@ -59,6 +79,18 @@
                         "schema": {
                             "$ref": "#/definitions/list.ResponsePersons"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.RequestError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.RequestError"
+                        }
                     }
                 }
             },
@@ -91,6 +123,18 @@
                         "schema": {
                             "$ref": "#/definitions/create.ResponseCreate"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.RequestError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.RequestError"
+                        }
                     }
                 }
             }
@@ -119,6 +163,18 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/storage.Person"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.RequestError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.RequestError"
                         }
                     }
                 }
@@ -159,6 +215,18 @@
                         "schema": {
                             "$ref": "#/definitions/response.RequestOK"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.RequestError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.RequestError"
+                        }
                     }
                 }
             },
@@ -186,6 +254,18 @@
                         "schema": {
                             "$ref": "#/definitions/response.RequestOK"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.RequestError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.RequestError"
+                        }
                     }
                 }
             }
@@ -196,13 +276,16 @@
             "type": "object",
             "properties": {
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Dmitriy"
                 },
                 "patronymic": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Vasilevich"
                 },
                 "surname": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Ushakov"
                 }
             }
         },
@@ -210,10 +293,12 @@
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "status": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "OK"
                 }
             }
         },
@@ -229,6 +314,19 @@
                 "status": {
                     "type": "string",
                     "example": "OK"
+                }
+            }
+        },
+        "response.RequestError": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "error description"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "Error"
                 }
             }
         },
